# arxiv-digest

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  config.toml  demo.tape  history.json  pyproject.toml
.github/workflows/: digest.yml
src/arxiv_digest/: cli.py  config.py  fetch.py  filter.py  models.py  parse.py  rank.py  render.py  setup.py  store.py  summarize.py
src/arxiv_digest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_config.py  test_fetch.py  test_filter.py  test_models.py  test_parse.py  test_render.py  test_store.py  test_summarize.py
tests/fixtures/: arxiv_response.xml  sample_data.py  seen.json
