# pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-digest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "ollama>=0.6.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[project.scripts]
arxd = "arxiv_digest.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]